@@ -1,0 +1,5 @@
+(foo-2)
+bar-2
+baz-1
+
+(exit 0)
